# LugBench

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  android_thirdparty.yml  appveyor.yml  thirdparty.yml
android/: local.properties  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/lugbench/: build.gradle
android/lugbench/src/main/: AndroidManifest.xml
android/lugbench/src/main/assets/shaders/forward/: shader.frag
android/lugbench/src/main/java/com/lugdunum/lugbench/: LugBenchNativeActivity.java
android/lugbench/src/main/res/values/: strings.xml
android/lugbench/src/main/res/xml/: network_security_config.xml
cmake/: Config.cmake  Macros.cmake
cmake/modules/: FindLUG.cmake  FindRestClientCpp.cmake  FindVulkan.cmake
doc/: README.md  architecture.md  build.md  user.md
include/: APIClient.hpp  APIURIBuilder.hpp  AState.hpp  Application.hpp  Application.inl  BenchmarkingState.hpp  BenchmarksState.hpp  ContactState.hpp  GPUInfoProvider.hpp  GPURequestor.hpp  GUI.hpp  InfoState.hpp  LoadingAnimation.hpp  LugNetwork.hpp  LugNetwork.inl  MenuState.hpp  ModelViewer.hpp  ModelViewer.inl  ModelsState.hpp  Network.hpp  ResultsState.hpp  Router.hpp  StdThread.hpp  VulkanInfoProvider.hpp  VulkanInfoProvider.inl  tapCamera.h  vecmath.h
include/APIClient/: Common.hpp  GPU.hpp  GPURequestor.hpp  Router.hpp
resources/licences/: imgui-licence.txt  lugdunum3d-licence.txt
resources/models/Duck/: Duck.gltf
src/: APIClient.cpp  Application.cpp  BenchmarkingState.cpp  BenchmarksState.cpp  ContactState.cpp  GPUInfoProvider.cpp  GPURequestor.cpp  GUI.cpp  InfoState.cpp  LoadingAnimation.cpp  LugNetwork.cpp  MenuState.cpp  ModelViewer.cpp  ModelsState.cpp  Network.cpp  ResultsState.cpp  Router.cpp  VulkanInfoProvider.cpp  VulkanInfoProvider.inl  main.cpp  tapCamera.cpp  vecmath.cpp
src/APIClient/: Common.cpp  GPU.cpp  GPURequestor.cpp  Router.cpp
test/ci/scripts/: appveyor_thirdparty.ps1  circle.sh  circle_dependencies.sh  circle_thirdparty.sh
thirdpartyold/: version
